master update swag documentation
